Fixed registration button on mobile

--- a/app/javascript/stylesheets/events.scss
+++ b/app/javascript/stylesheets/events.scss
@@ -46,3 +46,10 @@
    width: 75vw;
  }
 }
+
+@include respond-below(xs){
+  .registration-button {
+    width: 75%;
+    margin-top: 0.5rem;
+  }
+}
